syntax = "proto3";

option csharp_namespace = "Server";

package greet;

service AiService {
  rpc SendMessage(PromtRequest) returns (PromtResponse) {}
}

message PromtRequest {
  string message = 1;
}

message PromtResponse {
  string response = 1;
}